2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-14 Cameron Keif <keifcame@arctic.cse.msu.edu>
 * Return HTTP response to client

2014-01-22 Cameron Keif <keifcame@arctic.cse.msu.edu>
 * Added test_server.py for automated testing.
 * Return different responses for /, /content, /file, and /image paths.
 * Differentiate between GET and POST requests.

2014-01-29
 * Added support for HTML forms, using both GET and POST.