@@ -3,6 +3,6 @@
 {% block content %}
 Here is your image:
 <p>
-<img width=40% src='image_raw?special=latest'/>
+<img width=40% src='dice.png'/>
 
 {% endblock %}
