@@ -9,5 +9,6 @@ Here is the most recent image:
 </p>
 <p>
 <img width=40% src='image_raw?special=latest'/>
+<!--<img width = 40% src = '../dice.png'/>-->
 </p>
 {% endblock %}
