@@ -8,7 +8,7 @@ Content
 
 {% block content %}
 
-<h1>Duncan is great</h1>
+<h1>Cam is great</h1>
 This is some content.
 
 {% endblock %}
