@@ -2,13 +2,20 @@
 
  * Initialized repository, created server.py and README.
 
-2014-01-14 Cameron Keif <keifcame@arctic.cse.msu.edu>
+2014-01-14 Duncan Young <youngdun@arctic.cse.msu.edu>
  * Return HTTP response to client
 
-2014-01-22 Cameron Keif <keifcame@arctic.cse.msu.edu>
+2014-01-22 Duncan Young <youngdun@arctic.cse.msu.edu>
  * Added test_server.py for automated testing.
  * Return different responses for /, /content, /file, and /image paths.
  * Differentiate between GET and POST requests.
 
 2014-01-29
  * Added support for HTML forms, using both GET and POST.
+
+2014-03-20
+ * Completed hw8
+ * Tried deathly hard to implement a thumbnails page to no avail
+ * /thumbnails url works, but pictures don't load. Dictionary
+ * creates, but doesn't pass the information to the html template?
+ * I'm still very lost in this, and don't entirely understand what's going on.
